Towards Goby 2.0
 - Prevent logging when the log4j system has not been configured. For some reason, LOG.isDebugEnabled can return true
   when the logging system is not initialized. For SamHelper, this means calling String.Format million of times to
   create debug output that is never shown. This change dramatically improves the performance of the sam-to-compact mode
   when logging is not properly configured.

 - methylation region can now estimate empirical p-values. Empirical P-values require biological replicates in at least
   one of the groups under analysis. Two passes over the data are required. In the first pass, the empirical null
   distribution is observed by comparing pairs of samples in the same group. In the second pass, this distribution is
   used to estimate the p-value of observing the between group differences. Such empirical p-values can control FWER
   in the strong sense.
 - Support empirical p-value for individual bases (VCF output). Write a DMR INFO field that stores how many significant
   sites were found in a moving window that ends at the site (significance is judged according to a configurable
   threshold on the empirical p-value).
 - New empirical-p mode to estimate p-values from data in text files. This makes it easier to derive p-values for
   simulated data or counts generated by other tools than Goby.
 - Make it possible to open Goby alignments through HTTP. Simply specify a URL as a basename as argument to the goby
   tools. This is supported broadly by the API, so the concatenation reader also supports URLs, for instance. TMH files
   currently cannot be loaded remotely. Alignments that require upgrading will also fail to load remotely.
 - vcf methylation format: removed space in name of C and Cm group INFO fields.
 - Add a draft implementation of random access sequence interface that can read a fasta file indexed with faidx.